<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.exameniban.Actividad1">

<TextView
    android:id="@+id/lblCandidato"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/candidato"
    android:textAppearance="?android:textAppearanceLarge"/>

<TextView
    android:id="@+id/lblnombre"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/nombre"
    android:layout_below="@+id/lblCandidato"
    android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/lblnombre"
        android:layout_below="@+id/lblCandidato"/>

    <TextView
        android:id="@+id/lblprovincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provincia"
        android:layout_below="@+id/lblnombre"
        android:layout_marginTop="10dp"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblprovincia"
        android:layout_marginTop="10dp">
    </Spinner>

    <TextView
        android:id="@+id/lblsexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="10dp"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblsexo"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/btnmasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:layout_marginRight="5dp"/>
        <RadioButton
            android:id="@+id/btnfemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino"/>
    </RadioGroup>

    <TextView
        android:id="@+id/lblconocimientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conocimientos"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="10dp"/>
    <CheckBox
        android:id="@+id/chkPHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/php"
        android:layout_below="@+id/lblconocimientos"/>
    <CheckBox
        android:id="@+id/chkJAVA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/java"
        android:layout_below="@+id/lblconocimientos"
        android:layout_toRightOf="@+id/chkPHP"
        android:layout_marginLeft="5dp"/>
    <CheckBox
        android:id="@+id/chkHTML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/html"
        android:layout_below="@+id/lblconocimientos"
        android:layout_toRightOf="@+id/chkJAVA"
        android:layout_marginLeft="5dp"/>

    <CheckBox
        android:id="@+id/chkCSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/css"
        android:layout_below="@+id/lblconocimientos"
        android:layout_toRightOf="@+id/chkHTML"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/lbloperacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultadooperacion"
        android:layout_below="@+id/chkPHP"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbloperacion"
        />
    <TextView
        android:id="@+id/mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbloperacion"
        android:text="+"
        android:layout_toRightOf="@+id/num1"
        />
    <TextView
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbloperacion"
        android:layout_toRightOf="@+id/mas"
        />
    <TextView
        android:id="@+id/lbligual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbloperacion"
        android:text="="
        android:layout_toRightOf="@+id/num2"
        />
    <EditText
        android:id="@+id/resultadoIntroducir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbloperacion"
        android:layout_toRightOf="@+id/lbligual"
        android:inputType="number"
        />

    <Button
        android:id="@+id/butEvaluar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evaluar"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/resultadoIntroducir"
        android:onClick="evaluar"/>
    <TextView
        android:id="@+id/lblTotalCandidatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/candidatos"
        android:layout_below="@+id/butEvaluar"/>
    <TextView
        android:id="@+id/lblnumeroCandidados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butEvaluar"
        android:layout_toRightOf="@+id/lblTotalCandidatos"/>
    <Button
        android:id="@+id/butsalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SALIR"
        android:layout_below="@+id/lblTotalCandidatos"
        android:visibility="invisible"
        android:onClick="salir"/>

</RelativeLayout>
